unpackaged/main/default/objects/Questionnaire_Question__c/Questionnaire_Question__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Question</label>
    <nameField>
        <label>Questionnaire Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>