unpackaged/main/default/objects/Questionnaire_Question__c/fields/Call_Script__c.field-meta.xml
<CustomField>
    <fullName>Call_Script__c</fullName>
    <label>Call Script</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>