unpackaged/main/default/objects/Questionnaire_Question__c/fields/Conditional_Field__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Field__c</fullName>
    <label>Conditional Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>