unpackaged/main/default/objects/Questionnaire_Question__c/fields/Conditional_Value__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Value__c</fullName>
    <inlineHelpText>Criteria that must be met to show the question. If left blank then it will always show.</inlineHelpText>
    <label>Conditional Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>