unpackaged/main/default/objects/Questionnaire_Question__c/fields/Created_From_Template__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Template</label>
    <referenceTo>Questionnaire_Question__c</referenceTo>
    <relationshipLabel>Questionnaire Questions</relationshipLabel>
    <relationshipName>Questionnaire_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>