unpackaged/main/default/objects/Questionnaire_Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <formula>IF(ISBLANK(Help_Text_Override__c), Question__r.Help_Text__c, Help_Text_Override__c)</formula>
    <label>Help Text</label>
    <type>Text</type>
</CustomField>