unpackaged/main/default/objects/Questionnaire_Question__c/fields/Help_Text_Override__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_Override__c</fullName>
    <label>Help Text Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>