unpackaged/main/default/objects/Questionnaire_Question__c/fields/Override_Call_Script__c.field-meta.xml
<CustomField>
    <fullName>Override_Call_Script__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to use an override call script specific to the Questionnaire</inlineHelpText>
    <label>Override Call Script</label>
    <type>Checkbox</type>
</CustomField>