unpackaged/main/default/objects/Questionnaire_Question__c/fields/Parent_Questionnaire_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Questionnaire_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Questionnaire Question</label>
    <referenceTo>Questionnaire_Question__c</referenceTo>
    <relationshipLabel>Child Questionnaire Questions</relationshipLabel>
    <relationshipName>Child_Questionnaire_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>