unpackaged/main/default/objects/Questionnaire_Question__c/fields/Qualifier_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Qualifier_Criteria__c</fullName>
    <inlineHelpText>Criteria that must be met to be considered qualified. If let blank then this is not a qualifying question.</inlineHelpText>
    <label>Qualifier Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>