unpackaged/main/default/objects/Questionnaire_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Related Questionnaires</relationshipLabel>
    <relationshipName>RelatedQuestionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>