unpackaged/main/default/objects/Questionnaire_Question__c/fields/Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Question_Label__c</fullName>
    <formula>IF(ISBLANK(Question_Label_Override__c), Question__r.Question__c, Question_Label_Override__c)</formula>
    <label>Question Label</label>
    <type>Text</type>
</CustomField>