unpackaged/main/default/objects/Questionnaire_Question__c/fields/Question_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>Question_Label_Override__c</fullName>
    <inlineHelpText>What will be shown as the question label for this particular Case Type</inlineHelpText>
    <label>Question Label Override</label>
    <type>TextArea</type>
</CustomField>