unpackaged/main/default/objects/Questionnaire_Question__c/fields/Questionnaire_Section__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Section__c</fullName>
    <label>Questionnaire Section</label>
    <referenceTo>Questionnaire_Section__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>QuestionSection</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>