unpackaged/main/default/objects/Questionnaire_Question__c/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <formula>Questionnaire_Section__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Label</label>
    <type>Text</type>
</CustomField>