unpackaged/main/default/objects/Questionnaire_Question__c/fields/Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Number__c</fullName>
    <formula>Questionnaire_Section__r.Section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>