unpackaged/main/default/objects/Questionnaire_Question__c/fields/Sequence_Order__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Order__c</fullName>
    <inlineHelpText>On creation, if no sequence order then it&#39;ll add 5 to the existing number in that section</inlineHelpText>
    <label>Sequence Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>