unpackaged/main/default/objects/Questionnaire_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Question_Label__c</columns>
    <columns>Questionnaire_Section__c</columns>
    <columns>Questionnaire__c</columns>
    <columns>Section_Number__c</columns>
    <columns>Sequence_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>